# COMP2002

./: .gitignore  c2002.ipynb  final.ipynb  flake.nix  optimisation.ipynb  pyproject.toml  pyvenv.cfg  regression.ipynb
